--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,13 +7,13 @@ layout: default
 	<div class="post">
 		<h1>{{ page.title }}</h1>
 		<p class="post-meta">
-			{% if page.categories.size > 0 %}
+			{% if page.tags.size > 0 %}
       <span class="categories">
-      {{ page.categories | array_to_sentence_string }}
+      {{ page.tags | array_to_sentence_string }}
       </span> |
 	    {% endif %}
 	    <span class="post-date">
-    	{{ page.date | date: "%Y-%M-%D" }} 
+    	{{ page.date | date: "%Y-%m-%d" }} 
 	    </span>
 		</p>		
 		<div class="post">
