--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -3,14 +3,11 @@
 		<a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">About</a><span>/</span>
 	</li>
 	<li>
-		<a href="{{ '/blog' | prepend: site.baseurl | prepend: site.url }}">Blog</a><span>/</span>
+		<a href="{{ '/tags' | prepend: site.baseurl | prepend: site.url }}">Tags</a><span>/</span>
 	</li>
-	{% if site.harmony.social.github %}
 	<li>
-		<a title="{{ site.harmony.social.github }} on Github" 
-			href="https://github.com/gayanvirajith/harmony" target="_blank">
-			Download
-		</a><span>/</span>
+		<a href="{{ '/Memos' | prepend: site.baseurl | prepend: site.url }}">Memos</a><span>/</span>
+<span>/</span>
 	</li>
 	{% endif %}
 </ul>
