--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -3,11 +3,10 @@
 		<a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">About</a><span>/</span>
 	</li>
 	<li>
-		<a href="{{ '/tags' | prepend: site.baseurl | prepend: site.url }}">Tags</a><span>/</span>
+		<a href="{{ '/tags' | prepend: site.baseurl | prepend: site.url }}">tags</a><span>/</span>
 	</li>
 	<li>
-		<a href="{{ '/Memos' | prepend: site.baseurl | prepend: site.url }}">Memos</a><span>/</span>
-<span>/</span>
+		<a href="{{ '/memos' | prepend: site.baseurl | prepend: site.url }}">memos</a><span>/</span>
 	</li>
 	{% endif %}
 </ul>
