--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -3,10 +3,9 @@
 		<a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">About</a><span>/</span>
 	</li>
 	<li>
-		<a href="{{ '/tags' | prepend: site.baseurl | prepend: site.url }}">tags</a><span>/</span>
+		<a href="{{ '/tags' | prepend: site.baseurl | prepend: site.url }}">Tags</a><span>/</span>
 	</li>
 	<li>
-		<a href="{{ '/memos' | prepend: site.baseurl | prepend: site.url }}">memos</a><span>/</span>
+		<a href="{{ '/memos' | prepend: site.baseurl | prepend: site.url }}">Memos</a>
 	</li>
-	{% endif %}
 </ul>
