--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -6,6 +6,6 @@
 		<a href="{{ '/tags' | prepend: site.baseurl | prepend: site.url }}">Tags</a><span>/</span>
 	</li>
 	<li>
-		<a href="{{ '/memos' | prepend: site.baseurl | prepend: site.url }}">Memos</a>
+		<a href="{{ '/memos' | prepend: site.baseurl | prepend: site.url }}">Memos</a><span>/</span>
 	</li>
 </ul>
