--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: default
 		<ul class="posts">
 		    {% for post in site.related_posts limit:3 %}
 		    <li>
-			  <span>{{ post.date | date_to_string }} &raquo;</span>
+			  <span>{{ post.date | %Y-%m-%d }} &raquo;</span>
 			  <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">{{ post.title }}</a>
 		    </li>
 		    {% endfor %}
@@ -36,9 +36,7 @@ layout: default
 	</div>
 	{% endif %}
 	
-	{% if page.comments %}
-	{% include disqus.html %}
-	{% endif %}
+
 
 	<div class="post-footer">
 		<div class="column-1">
@@ -57,5 +55,8 @@ layout: default
 			{% endif %}
 		</div>
 	</div>
+        {% if page.comments %}
+	{% include disqus.html %}
+	{% endif %}
 </div>
  
