--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: default
 		<ul class="posts">
 		    {% for post in site.related_posts limit:3 %}
 		    <li>
-			  <span>{{ post.date | %Y-%m-%d }} &raquo;</span>
+			  <span>{{ page.date | date: "%Y-%m-%d" }}&raquo;</span>
 			  <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">{{ post.title }}</a>
 		    </li>
 		    {% endfor %}
