--- a/assets/css/_sass/partials/_variables.scss
+++ b/assets/css/_sass/partials/_variables.scss
@@ -27,4 +27,4 @@ $base-0F: #bc9458;
 
 
 // Fonts 
-$primary-font: 'Ubuntu Mono', "Bodoni Book", Bodoni, "Nanum Myeongjo", serif;
+$primary-font: 'Ubuntu Mono', "Bodoni Roman", Bodoni, "Nanum Myeongjo", serif;
