--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,16 +6,24 @@ layout: default
 	
 	<div class="post">
 		<h1>{{ page.title }}</h1>
+		
 		<p class="post-meta">
 			{% if page.tags.size > 0 %}
       <span class="categories">
-      {{ page.tags | array_to_sentence_string }}
+	      
+    {% assign tags = page.tags %}
+	      {% for tag in tags %}
+	      <a href="{{site.baseurl}}/tags/#{{tag|slugize}}">{{tag}}</a>
+	     {% endfor %}
+	      
       </span> |
 	    {% endif %}
 	    <span class="post-date">
-    	{{ page.date | date: "%Y-%m-%d" }} 
+    	{{ page.date | date: "%F %H:%M:%S %z" }} 
 	    </span>
 		</p>		
+		
+		
 		<div class="post">
 			{{ content }}
 		</div>
