--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 	      
     {% assign tags = page.tags %}
 	      {% for tag in tags %}
-	      <a href="{{site.baseurl}}/tags/#{{tag|slugize}}">{{tag}}</a>
+	      <a href="{{site.baseurl}}/tags/#{{tag|slugize}}">{{tag}}{{tag|last|size}}</a>
 	     {% endfor %}
 	      
       </span> |
