--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
       </span> |
 	    {% endif %}
 	    <span class="post-date">
-    	{{ page.date | date: "%F %H:%M:%S %z" }} 
+    	{{ page.date | date: "%F" }} 
 	    </span>
 		</p>		
 		
