--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -8,4 +8,7 @@
 	<li>
 		<a href="{{ '/memos' | prepend: site.baseurl | prepend: site.url }}">Memos</a><span>/</span>
 	</li>
+		<li>
+		<a href="{{ '/search' | prepend: site.baseurl | prepend: site.url }}">Search</a><span>/</span>
+	</li>
 </ul>
