--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,9 @@ layout: default
 	    {% endif %}
 	    <span class="post-date">
     	{{ page.date | date: "%F" }} 
+		     <a href="{{ '' | prepend: site.baseurl | prepend: site.url }}">home</a>
+		
+		    
 	    </span>
 		</p>		
 		
