--- a/_includes/footer-links.html
+++ b/_includes/footer-links.html
@@ -5,6 +5,8 @@
     <li><a href="{{ '/tags' | prepend: site.baseurl | prepend: site.url }}">Tags</a></li>
     <li><a href="{{ '/links' | prepend: site.baseurl | prepend: site.url }}">Links</a></li>
     <li><a href="{{ '/memos' | prepend: site.baseurl | prepend: site.url }}">Memos</a></li>
- <li><a href="{{ '/search' | prepend: site.baseurl | prepend: site.url }}">Search</a></li>
+ <li><a href="http://feeds.feedburner.com/SikuName">Feed</a></li>
+    <li><a href="{{ '/search' | prepend: site.baseurl | prepend: site.url }}">Search</a></li>
+    
 </ul>	
 
