--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -480,7 +480,7 @@ body.theme-base-01 {
     color: $base-07;
   }
 
-  header.main-header {
+  header.main-header, div.indexcontainer {
     color: $base-01;
     ul li { 
       color: $base-08;
@@ -500,7 +500,7 @@ body.theme-base-01 {
 
 --------------------------------- */
 
-header.main-header { 
+header.main-header, div.indexcontainer { 
   padding: 1em 0;
   @include MQ(M) { padding: 2em 0; }
 }
