--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -8,6 +8,9 @@
 	<li>
 		<a href="{{ '/memos' | prepend: site.baseurl | prepend: site.url }}">Memos</a><span>/</span>
 	</li>
+	<li>
+		<a href="{{ '/comments' | prepend: site.baseurl | prepend: site.url }}">Comments</a><span>/</span>
+	</li>	
 		<li>
 		<a href="{{ '/search' | prepend: site.baseurl | prepend: site.url }}">Search</a><span>/</span>
 	</li>
