--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,12 +37,14 @@ layout: default
 	<div class="related">
 		<h4>Related Posts</h4>
 		<ul class="posts">
-		    {% for post in site.related_posts limit:3 %}
+	{% unless tag.first == 'memo' %}
+               	{% for post in site.related_posts limit:5 %}
 		    <li>
 			  <span>{{ page.date | date: "%Y-%m-%d" }}&raquo;</span>
 			  <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">{{ post.title }}</a>
 		    </li>
 		    {% endfor %}
+	{% endunless %}
 		</ul>
 	</div>
 	{% endif %}
