--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@ layout: default
 	<div class="related">
 		<h4>Related Posts</h4>
 		<ul class="posts">
-	{% unless tag.first == 'memo' %}
+            {% unless post.tags contains 'memo' %}
                	{% for post in site.related_posts limit:5 %}
 		    <li>
 			  <span>{{ page.date | date: "%Y-%m-%d" }}&raquo;</span>
