--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,10 +40,21 @@ layout: default
 		<ul class="posts">
                	{% for post in site.related_posts limit:5 %}
 	{% unless post.tags contains 'memo' %}
+  
+			{% assign match = false %}
+  {% for tag in post.tags %}
+    {% if page.tags contains tag %}
+      {% assign match = true %}
+    {% endif %}
+  {% endfor %}
+  {% if match %}
 			<li>
 			  <span>{{ page.date | date: "%Y-%m-%d" }}&raquo;</span>
 			  <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">{{ post.title }}</a>
 		    </li>
+			 {% endif %}   
+			
+			
 				{% endunless %}
 		    {% endfor %}
 		</ul>
