--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -108,7 +108,10 @@ h5 {
 }
 
 h6 {
-  display: inline;
+  @include display(block);
+  @include MQ(M) {
+    @include display(inline);
+  }
   @include font-size(14px);
   @include MQ(M) {
     @include font-size(19px);
