--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -108,10 +108,7 @@ h5 {
 }
 
 h6 {
-  @include display(block);
-  @include MQ(M) {
-    @include display(inline);
-  }
+  display: inline;
   @include font-size(14px);
   @include MQ(M) {
     @include font-size(19px);
