--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ layout: default
 		<ul class="posts">
                	{% for post in site.related_posts limit:5 %}
 			<li>
-			  <span>{{ page.date | date: "%Y-%m-%d" }}&raquo;</span>
+			  <span>{{ post.date | date: "%F" }}&raquo;</span>
 			  <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">{{ post.title }}</a>
 		    </li>
 		    {% endfor %}
