--- a/_layouts/post (사본).html
+++ b/_layouts/post (사본).html
@@ -38,33 +38,12 @@ layout: default
 	<div class="related">
 		<h4>Related Posts</h4>
 		<ul class="posts">
-{% assign hasSimilar = '' %}
-{% for post in site.related_posts %}
-    {% assign postHasSimilar = false %}
-    {% for tag in post.tags %}
-        {% for thisTag in page.tags %}
-            {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
-                {% if hasSimilar.size == 0 %}
-                <h4>Similar Posts</h4>
-                <ul>
-                {% endif %}
-                <li class="relatedPost">
-                    <a href="{{ site.url }}{{ post.url }}">{{ post.title }}
-                    {% if post.series %}
-                        (Series: {{ post.series }})
-                    {% endif %}
-                    </a>
-                </li>
-                {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
-                {% assign postHasSimilar = true %}
-            {% endif %}
-        {% endfor %}
-    {% endfor %}
-{% endfor %}
-{% if hasSimilar.size > 0 %}
-    </ul>
-{% endif %}
-
+               	{% for post in site.related_posts limit:5 %}
+			<li>
+			  <span>{{ post.date | date: "%F" }}&raquo;</span>
+			  <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">{{ post.title }}</a>
+		    </li>
+		    {% endfor %}
 		</ul>
 	</div>
 	{% endif %}
