--- a/_includes/footer-links.html
+++ b/_includes/footer-links.html
@@ -4,7 +4,7 @@
     <li><a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">About</a></li>
     <li><a href="{{ '/tags' | prepend: site.baseurl | prepend: site.url }}">Tags</a></li>
     <li><a href="{{ '/links' | prepend: site.baseurl | prepend: site.url }}">Links</a></li>
-    <li><a href="{{ '/memos' | prepend: site.baseurl | prepend: site.url }}">Memos</a></li>
+    <li><a href="{{ '/memos/' | prepend: site.baseurl | prepend: site.url }}">Memos</a></li>
     <li><a href="{{ '/comments' | prepend: site.baseurl | prepend: site.url }}">Comments</a></li>
     <li><a href="http://feeds.feedburner.com/SikuName">Feed</a></li>
     <li><a href="{{ '/search' | prepend: site.baseurl | prepend: site.url }}">Search</a></li>
