--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@ layout: default
 
 
 {% assign hasSimilar = '' %}
-{% for post in site.related_posts %}
+{% for post in site.posts %}
     {% assign postHasSimilar = false %}
     {% for tag in post.tags %}
         {% for thisTag in page.tags %}
